--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
+rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
+uuid = { version = "1.0", features = ["v4"] }
 
 [lib]
 name = "thrud"
@@ -18,6 +20,10 @@ path = "src/lib.rs"
 [[bin]]
 name = "thrud-demo"
 path = "src/bin/demo.rs"
+
+[[bin]]
+name = "thrud-collector"
+path = "src/bin/collector.rs"
 
 [build-dependencies]
 cc = "1.0"
