--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ tokio = { version = "1.0", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
 rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
 uuid = { version = "1.0", features = ["v4"] }
+clap = { version = "4.0", features = ["derive"] }
 
 [lib]
 name = "thrud"
