--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,5 +26,9 @@ path = "src/bin/demo.rs"
 name = "thrud-collector"
 path = "src/bin/collector.rs"
 
+[[bin]]
+name = "thrud-chart-query"
+path = "src/bin/chart_query.rs"
+
 [build-dependencies]
 cc = "1.0"
